# AMWR

./: .gitignore  README.md
cartodom/: CMakeLists.txt  package.xml
cartodom/msg/: Cartodom.msg
cartodom/src/: converter.cpp  pub_cartodom.cpp
cartographer_ros/cartographer_ros/configuration_files/: aiv_virtual.rviz  aiv_virtual_dbg.rviz  colibri_dbgrobot.rviz  colibri_demo.rviz  colibri_joystick_createmap.lua  colibri_joystick_createmap.rviz  colibri_keyboard_createmap.lua  colibri_keyboard_createmap.rviz  colibri_virtual_dbg.lua  colibri_virtual_dbg.rviz  virtual.lua
cartographer_ros/cartographer_ros/launch/: aiv_virtual.launch  aiv_virtual_dbg.launch  basic.launch  basic_pydriver.launch  colibri_joystick_createmap.launch  colibri_joystick_creatmap_rviz.launch  colibri_keyboard_createmap.launch  colibri_virtual_dbg.launch  demo_backpack_2d_test.launch  demo_revo_lds_test.launch  virtua.launch
cartographer_ros/cartographer_ros/src/: cartographer_node_main.cc
cartographer_ros/cartographer_ros/urdf/: colibri_base.urdf  colibri_dbgrobot.urdf
cartographer_ros/cartographer_ros/urdf/aiv_base/: base.urdf.xacro  colibribase.xacro
cartographer_ros/cartographer_ros/urdf/aiv_virtual/: base.urdf.xacro  colibribase.xacro
cartographer_ros/cartographer_ros/urdf/aiv_virtual_full/: base.urdf.xacro  colibribase.xacro
cartographer_ros/cartographer_ros/urdf/aiv_virtual_simple/: base.urdf.xacro  colibribase.xacro
colibri_aiv/: CMakeLists.txt
colibri_aiv/include/: aiv_driver.h  cartodom_correct.h
colibri_aiv/src/: cartodom_correct.cpp  colibri_aiv_node.cpp  driver.cpp
colibri_crabnav/: CMakeLists.txt
colibri_crabnav/include/colibri_crabnav/: colibri_ca.h  nav_node_proc.h  protect.h
colibri_crabnav/launch/: crab_nav.launch
colibri_crabnav/path/: sza1112_mdf_cut_routes.yaml  szdk1102_mdf_cut_routes.yaml  szdk1102_mdf_cut_sp_nodes.yaml  ygl1020_mdf_cut_routes.yaml
colibri_crabnav/scripts/: aiv_start.sh
colibri_crabnav/src/: colibri_action.cpp  crab_aux.cpp  global_planner.cpp  nav_node_proc.cpp  protect.cpp  rectangle_test.cpp  safe_node.cpp
colibri_docking/: CMakeLists.txt  package.xml
colibri_docking/data/: new.txt  new_calc.txt
colibri_docking/include/colibri_docking/: colibri_ca.h  docking.h
colibri_docking/src/: docking.cc  docking_node.cc  docking_test.cc
colibri_host/config/: robot_info.yaml
colibri_host/scripts/: robot_comm.py
colibri_laser/: CMakeLists.txt
colibri_laser/config/: params.yaml
colibri_laser/launch/: LMS1xxcartogmap.launch
colibri_laser/param/: params.yaml
colibri_laser/src/: LMS1xx_cartogmap.cpp
colibri_nav/launch/: colibri_amcl.launch
colibri_nav/maps/: sza1112_mdf_cut.pgm  sza1112_mdf_cut.yaml  szdk1102_mdf_cut.pgm  szdk1102_mdf_cut.yaml  ygl1012_mdf_cut.pgm  ygl1012_mdf_cut.yaml  ygl1020_mdf_cut.yaml  ygl1023_mdf_cut.pgm  ygl1023_mdf_cut.yaml  ygl1103_mdf_cut.pgm  ygl1103_mdf_cut.yaml
colibri_pathproc/: CMakeLists.txt
colibri_pathproc/include/colibri_pathproc/: path_proc.h  routes_proc.h  routes_smoothing.h
colibri_pathproc/launch/: crab_path_handle.launch
colibri_pathproc/routes/: place0101_mdf_nodes.yaml  place0101_mdf_routes.yaml  sza1112_mdf_cut_sp_nodes.yaml  ygl0101_mdf_nodes.yaml  ygl0101_mdf_routes.yaml  ygl1012_mdf_cut_routes.yaml  ygl1103_mdf_cut_sp_nodes.yaml
colibri_pathproc/src/: path_proc.cpp  routes_handle.cc  routes_proc.cc  routes_smoothing.cc
colibri_screen/modbus_src/: modbus.c
colibri_stdnav/: CMakeLists.txt  package.xml
colibri_stdnav/include/colibri_stdnav/: APF_avoiding.h  PID_controller.h  actions.h
colibri_stdnav/launch/: aiv_start.launch  crab_nav.launch  kill_aiv.launch
colibri_stdnav/path/: sza1112_mdf_cut_branch_map.yaml  szdk1102_mdf_cut_branch_map.yaml  ygl1012_mdf_cut_branch_map.yaml  ygl1020_mdf_cut_sp_nodes.yaml  ygl1103_mdf_cut_routes.yaml
colibri_stdnav/scripts/: aiv_self_kill.sh
colibri_stdnav/src/: APF_avoiding.cc  APF_test.cc  Eigen_test.cc  PID_controller.cc  PID_controller.cpp  PID_test.cc  actions.cc  crab_nav.cpp
colibri_trajectorytraker/: CMakeLists.txt  package.xml
colibri_trajectorytraker/config/: dynamic_reconfigure.cfg
colibri_trajectorytraker/include/colibri_trajectorytraker/: trajectory_tracker.h
colibri_trajectorytraker/src/: trajectory_tracker.cpp  trajectory_tracker_node.cpp
